[package]
name = "trumpeting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
deadpool-postgres = "0.11.0"
prost = "0.12.1"
tokio-postgres = "0.7.10"
tonic = "0.10.2"

[build-dependencies]
tonic-build = "0.10.2" 

[[bin]]
name = "key_distribution"
path = "src/key_distribution/main.rs"
